// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button large 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1dafa1",
        "borderRadius": 5,
        "height": 66.5,
        "justifyContent": "center",
        "opacity": 1,
        "width": 525,
      }
    }
  >
    <Text
      color="white"
      style={
        Array [
          Object {
            "color": "white",
          },
        ]
      }
    >
      Hello Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button medium 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1dafa1",
        "borderRadius": 5,
        "height": 66.5,
        "justifyContent": "center",
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      color="black"
      style={
        Array [
          Object {
            "color": "black",
          },
        ]
      }
    >
      Hello Button
    </Text>
  </View>
</View>
`;
